--- a/Develop/index.html
+++ b/Develop/index.html
@@ -36,47 +36,47 @@
         <div class="time-block row" id="hour9">
           <div class="col-md-2 hour">9AM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour10">
           <div class="col-md-2 hour">10AM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour11">
           <div class="col-md-2 hour">11AM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour12">
           <div class="col-md-2 hour">12PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour13">
           <div class="col-md-2 hour">1PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour14">
           <div class="col-md-2 hour">2PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour15">
           <div class="col-md-2 hour">3PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour16">
           <div class="col-md-2 hour">4PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
         <div class="time-block row" id="hour17">
           <div class="col-md-2 hour">5PM</div>
           <textarea class="col-md-9 description"></textarea>
-          <button class="saveBtn col-md-1"></button>
+          <button class="saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
       
     </div>
